2015-04-23  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/admin/tasks/kibana.yml: not perfect define -e update=yes
	if it does not work out of the box

	* roles/hardware/templates/fstab (UUID): add a backup from ubuntu1 fstab

	* roles/webservers/handlers/main.yml: add a reload handler for nginx

2015-03-06  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* mono-mesos.yml: typo

2015-02-27  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/common/tasks/python.yml: change pip config, new pip do not
	need cache

2015-02-26  Pierre Aubert  <pierreaubert@iMac-de-Pierre.local>

	* roles/common/tasks/logrotate.yml: jons->jobs (typo), hours->hour
	upgrade for ansible 1.8.4

2014-07-04  Pierre Aubert  <pierre@imac-pierre.home>

	* version 1.0

	* grafana working

	* monit complete

	* time to go to next level

	* roles/hardware/templates/collectd/collectd.conf.d/nut.conf.j2:
	to many quotes; now working hard work just for this :(

	* roles/common/tasks/ntp.yml: add a conf for monit

	* roles/hardware/tasks/eaton.yml: desactivate ups for now

2014-06-30  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/databases/templates/monit.d/postgresql.conf.j2: correct
	process name

	* roles/databases/templates/postgresql.conf.j2
	(wal_sender_timeout): activate replication by default

2014-06-27  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/admin/tasks/storebackup.yml: correct mounted partition via UUID


	* roles/admin/templates/influxdb.toml.j2 (level): setlogleve to warn

2014-06-25  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/admin/vars/main.yml (carbon_host): upgrade es to 1.2

	* roles/7pi/templates/7pi-sso.conf.j2: do not put date in log filename

2014-06-22  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/admin/vars/main.yml (kibana_domain): small mistake

	* roles/webservers/tasks/nginx.yml: mv to nginx full and activate ngxsi

2014-06-21  Pierre Aubert  <pierre@imac-pierre.home>
