@@ -4,6 +4,14 @@
   tags: 
     - tasseo
 
+- name: Tasseo | check ~/src exist
+  file: path=/home/{{deploy_user}}/src/tasseo
+        state=directory
+        owner={{deploy_user}}
+        group={{deploy_user}}
+        mode=0755
+  tags: tasseo
+  
 - name: Tasseo | Checkout software
   git: repo=https://github.com/obfuscurity/tasseo.git
        dest=/home/{{deploy_user}}/src/tasseo
